TM-13091 Fixed the Dictionary param, so it pick the proper value, also refactored the rest of the methods to use the proper name

--- a/web-app/tds/web-app/app-js/modules/apiAction/components/view-edit/api-action-view-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/apiAction/components/view-edit/api-action-view-edit.component.html
@@ -80,13 +80,13 @@
 																	(valueChange)="onDictionaryValueChange($event)"
 																	[textField]="'name'"
 																	[valueField]="'id'"
-																	[(ngModel)]="apiActionModel.agentClass"
+																	[(ngModel)]="apiActionModel.dictionary"
 																	required class="form-control"
-																	[ngClass]="{'has-error':  (!apiActionForm.form.valid && apiActionForm.touched) && apiActionModel.agentClass?.id == 0}">
+																	[ngClass]="{'has-error':  (!apiActionForm.form.valid && apiActionForm.touched) && apiActionModel.dictionary?.id == 0}">
 												</kendo-dropdownlist>
 											</div>
 											<div class="col-sm-8" *ngIf="modalType === actionTypes.VIEW">
-												<label class="control-label label-detail">{{apiActionModel.agentClass.name}}</label>
+												<label class="control-label label-detail">{{apiActionModel.dictionary.name}}</label>
 											</div>
 										</div>
 										<div class="form-group">
@@ -102,7 +102,7 @@
 																	(open)="onOpenAgentMethod()"
 																	(valueChange)="onMethodValueChange($event)"
 																	[(ngModel)]="apiActionModel.agentMethod"
-																	[disabled]="!apiActionModel.agentClass.id"
+																	[disabled]="!apiActionModel.dictionary.id"
 																	required [ngClass]="{'has-error':  (!apiActionForm.form.valid && apiActionForm.touched) && apiActionModel.agentMethod?.id == '0'}">
 													<ng-template kendoDropDownListItemTemplate let-dataItem>
 														<span style="margin-right: 3px; min-width: 115px; font-weight: bold;">{{ dataItem?.name }}</span> <span style="margin-left: 3px;">{{ dataItem?.description }}</span>
