--- a/web-app/tds/web-app/css/page/module/dependencies/dependencies-list-component.sass
+++ b/web-app/tds/web-app/css/page/module/dependencies/dependencies-list-component.sass
@@ -1,6 +1,14 @@
 .dependencies-list-component
+  .bulkchange-section
+    padding-left: 8px
+    display: flex;
+    justify-content: start;
+    align-items: center;
+
   .dependencies
     .check-row
       display: flex
       justify-content: center
       align-items: center
+      input
+        cursor: pointer
