--- a/web-app/tds/web-app/app-js/modules/dependencies/components/list/dependencies-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/dependencies/components/list/dependencies-list.component.html
@@ -20,7 +20,7 @@
 				                        (operationResult)="onBulkOperationResult($event)">
 				</tds-bulk-change-button>
 
-				<div *ngIf="hasSelectedItems()" class="selected-assets">
+				<div *ngIf="hasSelectedItems()" class="bulk-change-counter">
 					<span class="badge badge-light">{{getSelectedItemsCount()}}</span><label>Asset(s) selected</label>
 				</div>
 			</div>
