--- a/web-app/tds/web-app/css/style.sass
+++ b/web-app/tds/web-app/css/style.sass
@@ -31,6 +31,7 @@
 @import "shared/components/connector.component"
 @import "shared/components/date-range-selector.component"
 @import "shared/components/number-control.component"
+@import "shared/components/bulk-change-counter"
 // Specific Module Layout/Components
 @import "shared/directives/tds-ui-prompt"
 @import "shared/directives/tds-ui-modal-decorator"
