--- a/web-app/tds/web-app/app-js/modules/dependencies/components/list/dependencies-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/dependencies/components/list/dependencies-list.component.html
@@ -16,6 +16,8 @@
 			<div class="col-sm-6 bulkchange-section">
 				<tds-bulk-change-button #tdsBulkChangeButton
 				                        [enabled]="hasSelectedItems()"
+				                        [showDelete]="true"
+				                        [showEdit]="false"
 				                        (clickBulk)="onClickBulkButton()"
 				                        (operationResult)="onBulkOperationResult($event)">
 				</tds-bulk-change-button>
