TM-12169 Implement deleting dependencies

--- a/web-app/tds/web-app/css/page/module/dependencies/dependencies-list-component.sass
+++ b/web-app/tds/web-app/css/page/module/dependencies/dependencies-list-component.sass
@@ -6,6 +6,9 @@
     align-items: center;
 
   .dependencies
+    margin-top: 10px
+    .k-grid-toolbar
+      padding: 5px 8px
     .check-row
       display: flex
       justify-content: center
