--- a/web-app/tds/web-app/css/page/module/dependencies/dependencies-list-component.sass
+++ b/web-app/tds/web-app/css/page/module/dependencies/dependencies-list-component.sass
@@ -7,6 +7,11 @@
 
   .dependencies
     margin-top: 10px
+    .sortable-column
+      display: inline
+      cursor: pointer
+      label
+        cursor: pointer
     .k-grid-toolbar
       padding: 5px 8px
     .check-row
