--- a/web-app/tds/web-app/css/page/module/dependencies/dependencies-list-component.sass
+++ b/web-app/tds/web-app/css/page/module/dependencies/dependencies-list-component.sass
@@ -19,10 +19,9 @@
         padding: 6px 22px 6px 6px
         height: 31px
       .k-filtercell-operator
-        .k-dropdown-operator
-          display: none
         position: absolute
         right: -5px
+        margin-top: 3px
         .k-button
           background: transparent
           border: none
