--- a/web-app/tds/web-app/css/page/module/dependencies/dependencies-list-component.sass
+++ b/web-app/tds/web-app/css/page/module/dependencies/dependencies-list-component.sass
@@ -5,7 +5,7 @@
     justify-content: start;
     align-items: center;
 
-  .dependencies
+  .k-grid
     margin-top: 10px
     .sortable-column
       display: inline
