TM-12270 - Fixed problem where user-preferences took up the whole page no matter what.

--- a/web-app/tds/web-app/css/page/module/user/user-preferences.component.sass
+++ b/web-app/tds/web-app/css/page/module/user/user-preferences.component.sass
@@ -25,6 +25,7 @@
     width: 100%
   table
     border: 1px solid #63a242
+    display: block
     width: 100%
     font-family: helvetica
     font-size: 12px
