--- a/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
+++ b/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
@@ -7,6 +7,11 @@
 
   .k-grid
     margin-top: 10px
+    min-height: 100%
+    position: relative
+
+    td
+      height: 30px
     .sortable-column
       display: inline
       cursor: pointer
