TM-13108 Missing tooltip

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/task-comment/task-comment.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/task-comment/task-comment.component.html
@@ -98,7 +98,7 @@
                     View All Comments
                 </label>
 
-                <button (click)="createComment()" class="btn btn-default float-right mar-right-15 pad-top-2 btn-add" type="button">
+                <button (click)="createComment()" class="btn btn-default float-right mar-right-15 pad-top-2 btn-add" type="button" title="Add Comment">
                     <i class="fa fa-med fa-fw fa-comment-o"></i> <span>Add</span>
                 </button>
             </ng-template>
