--- a/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
+++ b/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
@@ -1,4 +1,8 @@
 .dependencies-view-grid-component
+  .dependency-tag
+    display: inline-block
+    width: unset
+
   .bulkchange-section
     padding-left: 8px
     display: flex;
