TM-12275 Fix issue styling selected asset tags

--- a/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
+++ b/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
@@ -3,6 +3,14 @@
     display: inline-block
     width: unset
 
+  .asset-tag-selector-component
+    .k-widget
+      div.k-multiselect-wrap
+        kendo-taglist
+          ul
+            li:first-child()
+              display: none
+
   .bulkchange-section
     padding-left: 8px
     display: flex;
